# aws-network-routing-project

./: .gitignore  LICENSE  README.md  TEST_RESULTS.md
.github/workflows/: firewall-update.yml  route-update.yml  terraform.yml
config/: firewall-rules.yaml  routes.yaml
docs/: setup.md
python/: README.md  firewall_manager.py  pyproject.toml  requirements.txt  route_manager.py
scripts/: bootstrap-iam.sh  deploy.sh
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
